# gnn_project

./: .gitignore  JointTrainingDiagram.afdesign  README.md  pyproject.toml
notebooks/jackson/: joint_training.ipynb  link_prediction.ipynb  node_class.ipynb
notebooks/nathan/: CORA_Props.ipynb  Collateral.ipynb  DB_Connect.ipynb  DeBERTa_Embed.ipynb  Deprecated-GenResults-Copy1.ipynb  Deprecated-GenResults.ipynb  GenResults.ipynb  Generate_Results.ipynb  Generate_Results_JointLM.ipynb  LM_Embed.ipynb  LM_FineTune.ipynb  TAPE_Embed.ipynb  View_Results.ipynb  link_prediction.ipynb
src/: __init__.py  connect.py  eval.py  lm_config.py  lm_dataset.py  lm_models.py  lm_trainer.py  models.py  parse_arxiv_text.py  parse_cora_text.py  parse_pubmed_text.py  plotting.py  preprocess.py  results.py  train_model.py
